docs: show opening swagger doc
